# vehicle_dashboard

./: .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.devcontainer/: devcontainer.json
docker/: Dockerfile
proto/: battery.proto  exterior.proto  lock_state.proto  speed.proto  trip_data.proto
src/: events.rs  led_manager.rs  led_pwm.rs  lib.rs  main.rs  model.rs  subscribers.rs  topics.rs
ui/: main_window.slint  theme.slint
ui/components/: ambient_temperature.slint  battery_status.slint  connectivity_status.slint  left_widget.slint  right_widget.slint  speedometer.slint  state_adapter.slint  telltales.slint
ui/pages/: dashboard.slint  lock_screen.slint  page.slint
